<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Vita619</string>
    <string name="title_activity_home" tools:ignore="ExtraTranslation">Home</string>
    <string name="scanny">Scanny</string>

    <string name="no_disponible">Non disponible</string>

        <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
        <string name="facebook_application_id" translatable="false">2537046406582731</string>
        <string name="facebook_login_protocol_scheme" translatable="false">fb2537046406582731</string>
    <string name="entrez_une_valeur_ici">Entrez une valeur ici</string>
    <string name="annuler">annuler</string>
    <string name="faire">faire</string>
    <string name="mon_score">mon score</string>
    <string name="avatar">Decovrir Voter AVATAR</string>
    <string name="obtenir_score">obtenir point</string>
    <string name="mes_cadeaux">mes cadeaux</string>
    <string name="email_optionnel">Email (optionnel)</string>
    <string name="prenom">Prenom</string>
    <string name="nom">Nom</string>
    <string name="mon_profil">mon profil</string>
    <string name="date_de_naissance_optionnel">Date de naissance (optionnel)</string>
    <string name="t_l_phone_optionnel">téléphone (optionnel)</string>
    <string name="cadeaux_1_par_200_point">cadeaux 1 par 200 point</string>
    <string name="cadeaux_3_par_100_point">cadeaux 3 par 100 point</string>
    <string name="cadeaux_2_par_150_point">cadeaux 2 par 150 point</string>
    <string name="obtenir">obtenir</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="bienvenue">Bienvenue</string>

    <string-array name="tunisie">
        <item>Choisissez gouvernourat</item>
        <item>Ariana</item>
        <item>Béja</item>
        <item>Ben Arous</item>
        <item>Bizerte</item>
        <item>Gabès</item>
        <item>Gafsa</item>
        <item>Jendouba</item>
        <item>Kairouan</item>
        <item>Kasserine</item>
        <item>Kébili</item>
        <item>Kef</item>
        <item>Mahdia</item>
        <item>Manouba</item>
        <item>Médnine</item>
        <item>Montastir</item>
        <item>Nabeul</item>
        <item>Sfax</item>
        <item>Sidi bouzid</item>
        <item>Siliana</item>
        <item>Sousse</item>
        <item>Tataouine</item>
        <item>Tozeur</item>
        <item>Tunis</item>
        <item>Zaghouan</item>
    </string-array>

    <string name="key">AIzaSyA9RMPIQAeDwVgrpL_T4aLCHyBYQw8OZcc</string>


</resources>
