<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/back_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ACTIVITY.Home">




        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="45dp"
            android:layout_margin="16dp"
            android:id="@+id/photo"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_account"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="end"
            android:layout_height="45dp"/>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/vitalait"
            app:layout_constraintBottom_toTopOf="@+id/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mygifts" />

        <Button
            android:id="@+id/avatar"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:background="@drawable/back_button_yellow"
            android:text="@string/avatar"
            android:textColor="#FFF"
            android:textSize="19sp"
            android:textAllCaps="false"
            android:layout_marginBottom="10sp"
            app:layout_constraintBottom_toTopOf="@+id/getscore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <Button
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:textColor="#FFF"
            android:layout_margin="16dp"
            android:id="@+id/myscore"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_height="45dp"
            android:text="@string/mon_score"
            android:background="@drawable/back_login_bottom"
            />

        <Button
            android:id="@+id/mygifts"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:background="@drawable/back_login_bottom"
            android:text="@string/mes_cadeaux"
            android:textColor="#FFF"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/myscore"
            app:layout_constraintStart_toEndOf="@+id/myscore"
            app:layout_constraintTop_toTopOf="@+id/myscore" />

        <Button
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="40dp"
            android:layout_width="160dp"
            android:textColor="#FFF"
            android:textSize="14sp"
            android:padding="16dp"
            android:layout_height="60dp"
            android:id="@+id/getscore"
            android:text="@string/obtenir_score"
            android:background="@drawable/back_login_bottom"/>

        <RelativeLayout
            android:id="@+id/l"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="match_parent"
                android:background="#212121"
                android:id="@+id/cancel"
                android:layout_height="match_parent"
                android:alpha=".5"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/log"
                android:layout_centerInParent="true"
                android:layout_margin="16sp"
                android:text="Logout"
                android:background="@drawable/back_login_bottom"
                />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="copyright © 2020 InnoNouve all rights reserved"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="8dp"
            android:textColor="#616161"
            android:textSize="12sp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>