<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="#EEE"
        android:layout_height="match_parent">





        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:elevation="4dp"
                android:id="@+id/a"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="15dp"
                android:background="#169FD7"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="1dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mon_score"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#FFF"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:id="@+id/score"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginStart="16dp"
                    android:textColor="#FFF"/>

                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="1dp"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mes_cadeaux"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="#FFF"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:id="@+id/gifts"
                    android:layout_marginStart="16dp"
                    android:textColor="#FFF"/>

                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="1dp"
                    />


            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:background="@drawable/back_button_yellow"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_gift"
                        android:padding="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFF"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:text="@string/cadeaux_1_par_200_point"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:text="@string/obtenir"
                        android:layout_marginEnd="12sp"
                        android:id="@+id/gift1"
                        android:textColor="#FFF"
                        android:textAllCaps="false"
                        android:background="@drawable/back_login_bottom"
                        android:layout_height="40dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@drawable/back_button_yellow"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_gift"
                        android:padding="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFF"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:text="@string/cadeaux_2_par_150_point"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:text="@string/obtenir"
                        android:id="@+id/gift2"
                        android:layout_marginEnd="14dp"
                        android:textColor="#FFF"
                        android:textSize="12sp"
                        android:textAllCaps="false"
                        android:background="@drawable/back_login_bottom"
                        android:layout_height="40dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@drawable/back_button_yellow"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="70dp"

                        android:layout_height="match_parent"
                        android:src="@drawable/ic_gift"
                        android:padding="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFF"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:text="@string/cadeaux_3_par_100_point"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:text="@string/obtenir"
                        android:id="@+id/gift3"
                        android:layout_marginEnd="16dp"
                        android:textColor="#FFF"
                        android:textAllCaps="false"
                        android:textSize="12sp"
                        android:background="@drawable/back_login_bottom"
                        android:layout_height="40dp"/>

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:id="@+id/l"
            android:layout_height="match_parent">

            <View
                android:layout_width="match_parent"
                android:alpha=".5"
                android:layout_height="match_parent"
                android:background="#212121"/>

            <ProgressBar
                android:layout_width="40dp"
                android:layout_centerInParent="true"
                android:layout_height="40dp"/>

        </RelativeLayout>

    </RelativeLayout>
</layout>